[gd_scene load_steps=2 format=3 uid="uid://c30katweecxtg"]

[ext_resource type="Script" path="res://addons/localization_editor_plugin_g3/add_translation_popup.gd" id="1_eadg2"]

[node name="AddTranslationPopup" type="Popup" node_paths=PackedStringArray("_key_text", "_ref_text", "_target_text", "_uppercase_check_box", "_add_translation_button")]
title = "Add Translation Item"
initial_position = 2
size = Vector2i(300, 160)
visible = true
borderless = false
script = ExtResource("1_eadg2")
_key_text = NodePath("MarginContainer/VBoxContainer/HBoxContainer/KeyText")
_ref_text = NodePath("MarginContainer/VBoxContainer/ReferenceText")
_target_text = NodePath("MarginContainer/VBoxContainer/TargetText")
_uppercase_check_box = NodePath("MarginContainer/VBoxContainer/HBoxContainer/UppercaseCheckBox")
_add_translation_button = NodePath("MarginContainer/VBoxContainer/AddTranslationButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="KeyText" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "key"
caret_blink = true

[node name="UppercaseCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Automatically set key to uppercase"
focus_mode = 0
button_pressed = true
text = "Uppercase"

[node name="ReferenceText" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "[en] text here..."
caret_blink = true

[node name="TargetText" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "[es] text here..."
caret_blink = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddTranslationButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Add"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/KeyText" to="." method="_on_key_text_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/UppercaseCheckBox" to="." method="_on_uppercase_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/AddTranslationButton" to="." method="_on_add_translation_button_pressed"]
